src/widget/snapshots/masonry__widget__checkbox__tests__simple_checkbox-2.snap
---
source: masonry/src/widget/checkbox.rs
assertion_line: 210
expression: harness.root_widget()

---
SizedBox(
    Checkbox<[X] Hello>,
)
