src/widget/snapshots/masonry__widget__checkbox__tests__simple_checkbox.snap
---
source: masonry/src/widget/checkbox.rs
assertion_line: 199
expression: harness.root_widget()

---
SizedBox(
    Checkbox<[ ] Hello>,
)
